[gd_scene load_steps=4 format=3 uid="uid://cyc10rmx62s1n"]

[ext_resource type="Script" path="res://image slicer/image_slicer.gd" id="1_ou58s"]
[ext_resource type="Texture2D" uid="uid://cqxhrhkbjbs1r" path="res://bg.png" id="1_xecnm"]
[ext_resource type="Script" path="res://image slicer/rectangle_artist.gd" id="3_7ysg2"]

[node name="Image Slicer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ou58s")

[node name="bg" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xecnm")
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = " Images: "

[node name="add_image" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+"

[node name="image_list" type="ItemList" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="image_window" type="ScrollContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/image_window"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="current_image" type="TextureRect" parent="HBoxContainer/image_window/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Slices"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="part_container" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="rectangle_artist" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
script = ExtResource("3_7ysg2")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/add_image" to="." method="_on_add_image_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/image_list" to="." method="_on_image_list_item_selected"]
[connection signal="resized" from="HBoxContainer/image_window/CenterContainer/current_image" to="rectangle_artist" method="queue_redraw"]
